k8s/chargers-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chargers-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chargers-service
  template:
    metadata:
      labels:
        app: chargers-service
    spec:
      containers:
        - image: almarkdev/chargers-service:2022-01-10-22-10-03
          name: chargers-service
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
  name: chargers-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: chargers-service
