k8s/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /chargers
            pathType: Prefix
            backend:
              service:
                name: chargers-service
                port: 
                  number: 8080
          - path: /chargers/*
            pathType: Prefix
            backend:
              service:
                name: chargers-service
                port: 
                  number: 8080
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comments-and-ratings-service
                port: 
                    number: 8080   
          - path: /comments/*
            pathType: Prefix
            backend:
              service:
                name: comments-and-ratings-service
                port: 
                    number: 8080  
          - path: /ratings
            pathType: Prefix
            backend:
              service:
                name: comments-and-ratings-service
                port: 
                  number: 8080
          - path: /ratings/*
            pathType: Prefix
            backend:
              service:
                name: comments-and-ratings-service
                port: 
                  number: 8080
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port: 
                  number: 8080
          - path: /users/*
            pathType: Prefix
            backend:
              service:
                name: users-service
                port: 
                  number: 8080
          - path: /users/login
            pathType: Prefix
            backend:
              service:
                name: users-service
                port: 
                  number: 8080
          - path: /reservations
            pathType: Prefix
            backend:
              service:
                name: reservations-service
                port: 
                  number: 8080           
          - path: /reservations/*
            pathType: Prefix
            backend:
              service:
                name: reservations-service
                port: 
                  number: 8080
